Flatten sculpt brush not flatten in the first stroke #48897

Closed
opened 2016-07-19 20:41:52 +02:00 by YAFU · 8 comments

System Information
Kubuntu Linux 14.04 64bits. GTX 960

Blender Version
Broken: 2.77a
Worked: 2.74

Short description of error
Test file:
test file.blend
If you try to flatten the vertex marked with the grease pencil circle in the test file I shared, the brush acts weird on the first stroke (without releasing left mouse button).
Result is different if you sculpts by holding the left mouse button one time without releasing it and moving the mouse, compared to first doing a single click on the vertex and then releasing the button, and start sculpting again.
Apparently this behavior has started from Blender 2.75, perhaps when Accumulate option was added to this brush, but not sure.

Exact steps for others to reproduce the error
Open the test file in Blener 2.77a. Enable Dyntopo and try to flatten the vertex enclosed by the circle by holding down the left mouse button without releasing it and moving the mouse.

**System Information** Kubuntu Linux 14.04 64bits. GTX 960 **Blender Version** Broken: 2.77a Worked: 2.74 **Short description of error** Test file: [test file.blend](https://archive.blender.org/developer/F325114/test_file.blend) If you try to flatten the vertex marked with the grease pencil circle in the test file I shared, the brush acts weird on the first stroke (without releasing left mouse button). Result is different if you sculpts by holding the left mouse button one time without releasing it and moving the mouse, compared to first doing a single click on the vertex and then releasing the button, and start sculpting again. Apparently this behavior has started from Blender 2.75, perhaps when Accumulate option was added to this brush, but not sure. **Exact steps for others to reproduce the error** Open the test file in Blener 2.77a. Enable Dyntopo and try to flatten the vertex enclosed by the circle by holding down the left mouse button without releasing it and moving the mouse.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
Campbell Barton self-assigned this 2016-07-20 03:02:50 +02:00

Caused by own changes intended for clay brush, will check on fix tomorrow.
05b6de545a

Caused by own changes intended for clay brush, will check on fix tomorrow. 05b6de545a

This issue was referenced by 690063edb9

This issue was referenced by 690063edb928b2755462863d971600deb608f848

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hello.
I really do not know much about sculpt in Blender, so I really do not know exactly how it should be the behavior of the brush. So I have some questions.
I have compiled Blender from master (690063e) and when open the test file I noticed that "Accumulate" option is enabled by default now. If I disable "Accumulate" before beginning to sculpt, then the behavior is the same as mentioned earlier in this report, making that kind of bump in the first stroke. So this should be that way when "Accumulate" is disabled?

Hello. I really do not know much about sculpt in Blender, so I really do not know exactly how it should be the behavior of the brush. So I have some questions. I have compiled Blender from master (690063e) and when open the test file I noticed that "Accumulate" option is enabled by default now. If I disable "Accumulate" before beginning to sculpt, then the behavior is the same as mentioned earlier in this report, making that kind of bump in the first stroke. So this should be that way when "Accumulate" is disabled?

@YAFU, previous behavior would always accumulate. Enabled by default to match old behavior, but kept the option is still here since it could be useful in some cases (while it doesn't work nicely at cube corners - it can give more even result around edges)

@YAFU, previous behavior would always accumulate. Enabled by default to match old behavior, but kept the option is still here since it could be useful in some cases *(while it doesn't work nicely at cube corners - it can give more even result around edges)*
Author

Ok, I see. Thank you.

Ok, I see. Thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48897
No description provided.